# RSDaQ

./: .gitignore  README.md  pyproject.toml  requirements.txt
rsdaq/: __init__.py  __main__.py  app.py  calibration.py  config.py  display.py
rsdaq/core/: ringbuffer.py  stats.py  trigger.py  worker.py
rsdaq/daq/: __init__.py  backend.py  boards.py  mcc118_backend.py  mcc134_backend.py  mcc152_backend.py  mcc172_backend.py  simulator.py
rsdaq/io/: recorder.py
rsdaq/ui/: boards_dialog.py  calibration_dialog.py  control_panel.py  display_dialog.py  fft_panel.py  gauge_widget.py  main_window.py  output_panel.py  plot_panel.py  stats_panel.py  style.qss  tc_panel.py  vibration_panel.py
scripts/: install_pi.sh  run.sh
tests/: test_boards.py  test_calibration.py  test_config.py  test_display.py  test_mcc172.py  test_plot_panel.py  test_recorder.py  test_resizable_panels.py  test_ringbuffer.py  test_simulator.py  test_stats.py  test_tab_visibility.py  test_trigger.py
