[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsdaq"
version = "0.1.0"
description = "Data-acquisition GUI for Digilent MCC118 on Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rafisoltys" }]
dependencies = [
  "PySide6>=6.6",
  "pyqtgraph>=0.13",
  "numpy>=1.26",
  "h5py>=3.10",
]

[project.scripts]
rsdaq = "rsdaq.app:main"

[tool.setuptools.packages.find]
include = ["rsdaq*"]
